[MathML] Layout invalid markup as an <mrow> https://bugs.webkit.org/show_bug.cgi?id=123348

Reviewed by @fred-wang.

Upstream commit: https://github.com/web-platform-tests/wpt/commit/ad94cb830eef8b8ff67a41820b3a61519d6d2dbd

Change to make invalid MathML markup lay out as `mrow` by calling `RenderMathMLRow` methods when invalid. Additionally, make elements inheriting from `RenderMathMLRow` and `MathMLRowElement` explicitly override the methods that `RenderMathMLRow`/`MathMLRowElement` override in order to prevent elements erroneously behaving like `mrow`s when valid.

Remove the now unused `RenderMathMLBlock::layoutInvalidMarkup`.

Amend the check for validity in `RenderMathMLScripts::validateAndGetReferenceChildren` to match the spec [1].

Important relevant `mrow` fallback tests from WPT and update test expectations.

[1]: https://w3c.github.io/mathml-core/spec.html#prescripts-and-tensor-indices-mmultiscripts#:~:text=that%20is%20not%20an%20mprescripts%20element
Canonical link: https://commits.webkit.org/281218@main