Source/WebCore/rendering/mathml/RenderMathMLBlock.cpp
@@ -260,25 +260,6 @@ void RenderMathMLBlock::layoutBlock(bool relayoutChildren, LayoutUnit)
     clearNeedsLayout();
 }
 
-void RenderMathMLBlock::layoutInvalidMarkup(bool relayoutChildren)
-{
-    // Invalid MathML subtrees are just renderered as empty boxes.
-    // FIXME: https://webkit.org/b/135460 - Should we display some "invalid" markup message instead?
-    ASSERT(needsLayout());
-    for (auto* child = firstChildBox(); child; child = child->nextSiblingBox()) {
-        if (child->isOutOfFlowPositioned()) {
-            child->containingBlock()->insertPositionedObject(*child);
-            continue;
-        }
-        child->layoutIfNeeded();
-    }
-    setLogicalWidth(0);
-    setLogicalHeight(0);
-    layoutPositionedObjects(relayoutChildren);
-    updateScrollInfoAfterLayout();
-    clearNeedsLayout();
-}
-
 void RenderMathMLBlock::computeAndSetBlockDirectionMarginsOfChildren()
 {
     for (auto* child = firstChildBox(); child; child = child->nextSiblingBox())
