Source/WebCore/rendering/mathml/RenderMathMLScripts.h
@@ -35,7 +35,7 @@
 namespace WebCore {
 
 // Render a base with scripts.
-class RenderMathMLScripts : public RenderMathMLBlock {
+class RenderMathMLScripts : public RenderMathMLRow {
     WTF_MAKE_ISO_ALLOCATED(RenderMathMLScripts);
     WTF_OVERRIDE_DELETE_FOR_CHECKED_PTR(RenderMathMLScripts);
 public:
@@ -60,7 +60,7 @@ private:
         RenderBox* firstPostScript;
         RenderBox* firstPreScript;
     };
-    std::optional<ReferenceChildren> validateAndGetReferenceChildren();
+    std::optional<ReferenceChildren> validateAndGetReferenceChildren() const;
     LayoutUnit spaceAfterScript();
     LayoutUnit italicCorrection(const ReferenceChildren&);
     struct VerticalParameters {
